@@ -20,8 +20,8 @@ package org.openqa.selenium.support.locators;
 import static org.openqa.selenium.support.locators.RelativeLocatorScript.FIND_ELEMENTS;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
 import java.util.List;
+import java.util.Map;
 import org.openqa.selenium.By;
 import org.openqa.selenium.InvalidArgumentException;
 import org.openqa.selenium.JavascriptExecutor;
@@ -64,8 +64,7 @@ public class RelativeLocatorServerSide implements CustomLocator {
 
         @SuppressWarnings("unchecked")
         List<WebElement> elements =
-            (List<WebElement>)
-                js.executeScript(FIND_ELEMENTS, ImmutableMap.of("relative", converted));
+            (List<WebElement>) js.executeScript(FIND_ELEMENTS, Map.of("relative", converted));
         return elements;
       }
 
